--- a/css/style.css
+++ b/css/style.css
@@ -92,3 +92,52 @@ header .navbar ul li a{
   border-radius: 5rem;
 
 }
+
+header .navbar ul li a:hover{
+  background: var(--yellow);
+}
+
+#menu{
+  position: fixed;
+  top: 2rem; right: 2rem;
+  background: #333;
+  color: #fff;
+  cursor: pointer;
+  font-size: 2.5rem;
+  padding: 1rem 1.5rem;
+  z-index: 1000;
+  display: none;
+}
+
+
+
+
+/*media queries*/
+
+@media (max-width:1200px){
+  html{
+    font-size: 55%;
+  }
+}
+
+@media (max-width:991px){
+  header{
+    left: 120%;
+  }
+  #menu{
+    display: block;
+  }
+
+  header.toggle{
+    left: 0%;
+  }
+
+  @media (max-width:400px){
+    header{
+      width: 100vw;
+
+  }
+
+}
+
+}
