--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,45 @@ html::-webkit-scrollbar-thumb{
 body{
   background: #111;
   overflow-x: hidden;
+  padding-left: 35rem;
+}
+
+section{
+  min-height: 100vh;
+  padding: 1rem;
+}
+
+.btn{
+  padding: 1rem 3rem;
+  background: #333;
+  color: #fff;
+  cursor: pointer;
+  margin-top: 1rem;
+  font-size: 2rem;
+  border-radius: 5rem;
+
+}
+
+.btn i{
+  padding:0.5rem;
+  font-size: 1.8rem;
+}
+
+.btn:hover{
+  background: var(--yellow);
+}
+
+.heading{
+  text-align: center;
+  margin: 0 6rem;
+  font-size: 4rem;
+  padding: 1rem;
+  border-bottom: 0.3rem solid #fff4;
+  color: #fff;
+}
+
+.heading span{
+  color:var(--yellow);
 }
 
 header{
@@ -110,6 +149,131 @@ header .navbar ul li a:hover{
 }
 
 
+.home{
+  display: flex;
+  justify-content: center;
+  flex-flow: column;
+  padding: 0 15rem;
+}
+
+.home h3{
+  font-size: 2.5rem;
+  color: #fff;
+
+}
+
+.home h1{
+  font-size: 5rem;
+  color: #fff;
+}
+
+
+.education .box-container{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 1rem 0;
+  padding-left: 3rem;
+}
+
+.education .box-container .box{
+  width: 27rem;
+  margin: 4rem 1rem;
+  padding-left: 4rem;
+  border-left: .2rem solid #fff;
+  position: relative;
+}
+.education .box-container .box span{
+  font-size: 1.3rem;
+  background: #222;
+  color: #fff;
+  border-radius: 5rem;
+  padding: .5rem 2.5rem;
+
+}
+.education .box-container .box h3{
+  font-size: 2rem;
+  color: white;
+  padding-top: 1.5rem;
+
+}
+
+.education .box-container .box p{
+  font-size: 1.4rem;
+  color: #eee;
+  padding-top: 1rem 0;
+}
+
+
+.home h1 span{
+  color: var(--yellow);
+}
+
+.home p{
+  font-size: 2rem;
+  color: #eee;
+  padding: 1rem;
+}
+
+
+.about .row{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 1rem 0;
+}
+
+.about .row .info{
+  flex:1 1 48rem;
+  padding: 2rem 1rem;
+  padding-left: 6rem;
+}
+
+.about .row .info h3{
+  font-size: 2rem;
+  color:var(--yellow);
+  padding: 1rem 0;
+  font-weight: normal;
+}
+
+.about .row .info h3 span{
+  color: #eee;
+  padding: 0 ,5rem;
+}
+
+.portfolio .box-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 2rem 0;
+}
+
+.portfolio .box-container .box{
+  height: 30rem;
+  width: 26rem;
+  border-radius: 1rem;
+  margin: 2rem;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.portfolio .box-container .box img{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.portfolio .box-container .box:hover img{
+  transform: scale(1.2);
+}
+
+
+
+
+
 
 
 /*media queries*/
@@ -117,6 +281,10 @@ header .navbar ul li a:hover{
 @media (max-width:1200px){
   html{
     font-size: 55%;
+  }
+
+  .home{
+    padding: 1rem 4rem;
   }
 }
 
@@ -132,10 +300,22 @@ header .navbar ul li a:hover{
     left: 0%;
   }
 
+  body {
+    padding: 0;
+  }
+
   @media (max-width:400px){
     header{
       width: 100vw;
 
+  }
+
+  .heading{
+    margin: 0 3rem;
+
+  }
+  .education{
+    width: 100%;
   }
 
 }
