Finished up on the portfolio

--- a/css/style.css
+++ b/css/style.css
@@ -271,6 +271,60 @@ header .navbar ul li a:hover{
 }
 
 
+.contact .row{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.contact .row .content{
+  flex:1 1 30rem;
+  padding: 4rem;
+  padding-bottom: 0;
+}
+
+.contact .row form{
+  flex: 1 1 45rem;
+  padding: 2rem;
+  margin: 2rem;
+  margin-bottom: 4rem;
+}
+
+.contact .row form .box{
+  padding: 1rem;
+  margin: 1rem 0;
+  background: #3333;
+  color: #fff;
+  text-transform: none;
+  font-size: 1.7rem;
+  width: 100%;
+}
+
+.contact .row form .box::placeholder{
+  text-transform: capitalize;
+}
+
+.contact .row form .message{
+  height: 15rem;
+  resize: none;
+}
+
+.contact .row .content .title{
+  text-transform: uppercase;
+  color: #fff;
+  font-size: 3rem;
+  padding-bottom: 2rem;
+}
+
+.contact .row .content .info h3{
+  display: flex;
+  align-items: center;
+  font-size: 2rem;
+  color: #eee;
+  padding: 1rem 0;
+  font-weight: normal;
+}
 
 
 
@@ -314,10 +368,18 @@ header .navbar ul li a:hover{
     margin: 0 3rem;
 
   }
-  .education{
+  .education .box-container .box{
     width: 100%;
   }
 
+
+  .portfolio .box-container .box{
+    width: 100%;
+  }
+
+  .contact.row form{
+    width: 100%;
+  }
 }
 
 }
